# two-stage-prompting-research

./: .env.example  .gitignore  CLAUDE.md  README.md  main.tex  pyproject.toml  pytest.ini  requirements.txt
_legacy/: README.md
_legacy/data/: questions.csv
config/: default.yaml  settings.py
core/: extractor.py
prompts/v1/: direct_mcq.txt  free_text.txt  option_matching.txt
scripts/: aggregate_results.py  answer_agreement_analysis.py  baseline.py  comparison_chart.py  eval.py  evaluate_run.py  generate_figures.py  prepare_data.py  run_experiment.py  sample_data.py  smoke_clients.py  token_distribution.py  two_prompt.py
scripts/analysis/: answer_agreement_analysis.py  comparison_chart.py  eval.py  token_distribution.py
scripts/experiments/: baseline.py  two_prompt.py
scripts/utils/: constants.py  pid.py  test_env.py
src/twoprompt/: __init__.py
src/twoprompt/benchmarks/: arc.py  (+3 more)
tests/: conftest.py  test_extractor.py
tests/benchmarks/: test_arc.py  test_mmlu.py  test_split.py
tests/clients/: test_base.py  test_gemini_client.py  test_groq_client.py  test_openai_client.py  test_together_client.py  test_types.py
tests/evaluation/: test_evaluate_run.py
tests/fixtures/: sample_mcq_outputs.json
tests/infra/: test_cache.py  test_checkpoint.py
tests/io/: test_readers.py  test_writers.py
tests/parsing/: test_parser.py
tests/pipeline/: test_prompt_builder.py
tests/runners/: conftest.py  test_direct_mcq.py  test_permutation.py  test_pride.py  test_pride_debias.py  test_two_stage.py  test_two_stage_permutation.py
tests/scoring/: test_scorer.py
(+46 files in other folders)
